<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">Extensions</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="music_category">Music</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="icons_category">Icons</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="recents_category_summary">Customize your recents overview</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="status_bar_category_summary">Customize your statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="notifications_panel_category_summary">Customize your QS panel and notificaitons</string>
    <string name="system_category">System</string>
    <string name="system_category_summary">Various system extensions</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="panels_category">Panels</string>
    <string name="panels_category_summary">Statusbar, Notification, Quick Settings panels</string>
    <string name="lockscreen_category_summary">Customize your lockscreen</string>
    <string name="build_tweaks_summary_title">Extend your device!</string>
    <string name="system_animations">System Animations</string>
    <string name="listview">ListView</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="misc_extensions_title">Misc extensions</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="smart_pixels_warning_text">Smart pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend you set the amount of disabled pixels at 75 percent.</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="buttons_title">Buttons</string>
    <string name="app_ops_category">Privacy Guard</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="show_network_traffic_down">Downlink</string>
    <string name="show_network_traffic_all">Uplink and Downlink</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="toast_icon_title">App\'s icon in toast</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="qs_layout_category">QS tiles layout</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
    <string name="wakelock_blocker_title">Wakelock Blocker</string>
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
    <string name="lockscreen_qs_disabled_title">No QS when secured</string>
    <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="screenshot_type_title">Partial screenshot</string>
    <string name="screenshot_type_partial">Drag selection on the area for screenshot via volume keys</string>
    <string name="qqs_scroll_title">Quick scroll small tiles</string>
    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="status_bar_custom_header_summary">Choose an image to be displayed at the top of the notification panel</string>
    <string name="qs_appearance_category">APPEARANCE</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Click on any image to use for static mode</string>
    <string name="qs_misc_category">Misc</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="screen_state_toggles_title">Suspend Actions</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="adb_notify_title">ADB notification</string>
    <string name="adb_notify_summary">Display a notification when android debugging is enabled</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Location</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="battery_bar_color">Color</string>
    <string name="battery_bar_battery_low_color">Low battery color</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_charging_color">Charging color</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="statusbar_battery_bar_show_on_lock_screen_title">Show on lockscreen</string>
    <string name="system_app_remover">System app remover</string>
    <string name="qs_panel_alpha_title">Transparency</string>
    <string name="animations_title">Animations</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="screenshot_options_category">Screenshot options</string>
    <string name="flash_on_call_category">Pulse flash</string>
    <string name="flash_on_call_title">Pulse flash on incoming call</string>
    <string name="flash_on_call_delay_title">Flash pulse rate</string>
    <string name="dialer_title">Dialer</string>
</resources>