<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/general_tweaks_title">

    <PreferenceCategory
        android:key="general_tweaks_general_category"
        android:title="@string/general_category">

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="disable_fc_notifications"
            android:title="@string/disable_fc_notifications_title"
            android:summary="@string/disable_fc_notifications_summary"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SecureSettingSwitchPreference
    	    android:key="adb_notify"
    	    android:title="@string/adb_notify_title"
    	    android:summary="@string/adb_notify_summary"
    	    android:defaultValue="true" />

        <org.aospextended.extensions.preference.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />
	<ListPreference
    	    android:key="screen_off_animation"
    	    android:title="@string/screen_off_animation_title"
    	    android:entries="@array/screen_off_animation_entries"
    	    android:entryValues="@array/screen_off_animation_values" />

    <!-- MediaScanner behavior on boot -->
    <ListPreference
        android:key="media_scanner_on_boot"
        android:title="@string/media_scanner_on_boot_title"
        android:entries="@array/media_scanner_on_boot_entries"
        android:entryValues="@array/media_scanner_on_boot_values" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="screenshot_options"
            android:title="@string/screenshot_options_category" >
        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
                android:key="three_finger_gesture"
                android:title="@string/three_finger_gesture"
                android:summary="@string/three_finger_gesture_summary"
                android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
                android:key="screenshot_type"
                android:title="@string/screenshot_type_title"
                android:summary="@string/screenshot_type_partial"
                android:defaultValue="false" />
        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
                android:key="screenshot_crop_and_share"
                android:title="@string/screenshot_crop_and_share_title"
                android:summary="@string/screenshot_crop_and_share_summary"
                android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

  <PreferenceCategory
        android:key="qsset_misc_category"
        android:title="@string/qs_misc_category">

    <Preference
        android:key="suspend_actions"
        android:title="@string/screen_state_toggles_title"
        android:fragment="org.aospextended.extensions.SuspendActions" />

     <Preference
         android:key="wakelock_blocker"
         android:fragment="org.aospextended.extensions.WakeLockBlocker"
         android:title="@string/wakelock_blocker_title" />

     <Preference
         android:id="@+id/alarm_blocker"
         android:fragment="org.aospextended.extensions.AlarmBlocker"
         android:title="@string/alarm_blocker" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category"
        android:title="@string/light_category">

     <Preference
         android:key="battery_charging_light"
         android:fragment="org.aospextended.extensions.BatteryLightSettings"
         android:title="@string/battery_light_settings" />

    </PreferenceCategory>

</PreferenceScreen>
