<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quick_settings_title">

    <PreferenceCategory
        android:key="quick_settings_general_category"
        android:title="@string/general_category">

	<org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="qs_panel_alpha"
        android:title="@string/qs_panel_alpha_title"
        android:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false" />

        <org.aospextended.extensions.preference.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/qs_brightness_slider_title"
        android:summary="@string/qs_brightness_slider_summary"
        android:defaultValue="true"/>

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:dependency="qs_show_brightness"
        android:defaultValue="false"/>

        <org.aospextended.extensions.preference.SecureSettingSwitchPreference
        android:key="lockscreen_qs_disabled"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_custom_header"
        android:title="@string/qs_appearance_category">

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:summary="@string/status_bar_custom_header_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <Preference
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.PickHeaderActivity" />
        </Preference>

    <org.aospextended.extensions.preference.CustomSeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="100"
            settings:min="0"
            settings:units="%"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

    </PreferenceCategory>

  <PreferenceCategory
        android:key="qsset_misc_category"
        android:title="@string/qs_misc_category">

	<org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="qs_tile_title_visibility"
            android:title="@string/qs_tile_title_visibility_title"
            android:defaultValue="true" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="qs_quickbar_scroll_enabled"
            android:title="@string/qqs_scroll_title"
            android:summary="@string/qqs_scroll_summary"
            android:defaultValue="false"/>

        <ListPreference
            android:key="quick_pulldown"
            android:title="@string/quick_pulldown_title"
            android:entries="@array/quick_pulldown_entries"
            android:entryValues="@array/quick_pulldown_values"
            android:persistent="false" />

        <ListPreference
            android:key="smart_pulldown"
            android:title="@string/smart_pulldown_title"
            android:entries="@array/smart_pulldown_entries"
            android:entryValues="@array/smart_pulldown_values"
            android:persistent="false" />

    </PreferenceCategory>

  <PreferenceCategory
        android:key="qs_layout_category"
        android:title="@string/qs_layout_category">

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="qs_rows_portrait"
        android:title="@string/qs_rows_portrait_title"
        android:max="5"
        settings:min="1"
        settings:units="" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="qs_rows_landscape"
        android:title="@string/qs_rows_landscape_title"
        android:max="3"
        settings:min="1"
        settings:units="" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="qs_columns_portrait"
        android:title="@string/qs_columns_portrait_title"
        android:max="7"
        settings:min="1"
        settings:units="" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="qs_columns_landscape"
        android:title="@string/qs_columns_landscape_title"
        android:max="9"
        settings:min="1"
        settings:units="" />

    </PreferenceCategory>

</PreferenceScreen>
