<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    android:title="@string/battery_bar_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <ListPreference
        android:key="statusbar_battery_bar_list"
        android:title="@string/battery_bar"
        android:entries="@array/battery_bar_entries"
        android:entryValues="@array/battery_bar_values"
        android:persistent="false" />

    <org.aospextended.extensions.preference.CustomSeekBarPreference
        android:key="statusbar_battery_bar_thickness"
        android:title="@string/battery_bar_thickness_title"
        android:max="4"
        settings:min="1"
        settings:units="dp"
        android:persistent="false" />

    <ListPreference
        android:key="statusbar_battery_bar_style"
        android:title="@string/battery_bar_style_title"
        android:entries="@array/battery_bar_style_entries"
        android:entryValues="@array/battery_bar_style_values"
        android:persistent="false" />

    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="statusbar_battery_bar_blend_color"
        android:title="@string/battery_bar_blend_color_title"
        android:summary="@string/battery_bar_blend_color_summary"
        android:defaultValue="false" />

    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="statusbar_battery_bar_blend_color_reverse"
        android:title="@string/battery_bar_blend_color_reverse_title"
        android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
        android:summaryOff="@string/battery_bar_blend_color_reverse_summary_off"
        android:dependency="statusbar_battery_bar_blend_color"
        android:defaultValue="false" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="statusbar_battery_bar_color"
        android:title="@string/battery_bar_color"
        android:defaultValue="0xffffff" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="statusbar_battery_bar_battery_low_color"
        android:title="@string/battery_bar_battery_low_color"
        android:defaultValue="0xffffff" />

    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="statusbar_battery_bar_enable_charging_color"
        android:title="@string/battery_bar_use_charging_color"
        android:defaultValue="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="statusbar_battery_bar_charging_color"
        android:title="@string/battery_bar_charging_color"
        android:defaultValue="0xffffff"
        android:dependency="statusbar_battery_bar_enable_charging_color" />

    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="statusbar_battery_bar_animate"
        android:title="@string/battery_bar_animate_title" />

    <org.aospextended.extensions.preference.SystemSettingSwitchPreference
        android:key="statusbar_battery_bar_show_on_lock_screen"
        android:title="@string/statusbar_battery_bar_show_on_lock_screen_title" />
</PreferenceScreen>