<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/dialer_title">

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="flash_on_call_options"
        android:title="@string/flash_on_call_category" >

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="flash_on_call_waiting"
            android:title="@string/flash_on_call_title"
            android:defaultValue="false" />

        <org.aospextended.extensions.preference.CustomSeekBarPreference
            android:key="flash_on_call_waiting_delay"
            android:max="1000"
            android:persistent="false"
            android:title="@string/flash_on_call_delay_title"
            settings:min="50"
            settings:units="ms"
            settings:interval="50"
            android:dependency="flash_on_call_waiting"/>

    </PreferenceCategory>

</PreferenceScreen>