<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/system_category">

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="org.aospextended.extensions.GeneralTweaks"
        android:icon="@drawable/ic_general_tweaks"
        android:key="general_tweaks"
        android:title="@string/general_tweaks_title"/>

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="org.aospextended.extensions.Animations"
        android:icon="@drawable/ic_animations"
        android:key="animations"
        android:title="@string/animations_title"/>

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="org.aospextended.extensions.Buttons"
        android:icon="@drawable/ic_buttons"
        android:key="buttons"
        android:title="@string/buttons_title"/>

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="org.aospextended.extensions.RecentsUI"
        android:icon="@drawable/ic_recents_ui"
        android:key="recents_ui"
        android:title="@string/recents_ui_title"/>

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="com.android.settings.privacyguard.PrivacyGuardManager"
        android:icon="@drawable/ic_settings_appops"
        android:key="privacy_guard_manager"
        android:title="@string/app_ops_category"/>

    <org.aospextended.extensions.preference.CardviewPreference
        android:fragment="org.aospextended.extensions.SystemappRemover"
        android:icon="@drawable/ic_systemappremover"
        android:key="systemappremover"
        android:title="@string/system_app_remover"/>

</PreferenceScreen>
